crates/tmc-langs-cli/tests/snapshots/integration__compress_project_zip@csharp__failing-exercise-2.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: files
input_file: sample_exercises/csharp/failing-exercise
---
- failing-exercise
- failing-exercise/src
- failing-exercise/src/FailingSample
- failing-exercise/src/FailingSample/Program.cs
