crates/tmc-langs-cli/tests/snapshots/integration__compress_project_zip@csharp__non-compiling-exercise-2.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: files
input_file: sample_exercises/csharp/non-compiling-exercise
---
- src
- src/NonCompilingSample
- src/NonCompilingSample/NonCompilingSample.csproj
- src/NonCompilingSample/Program.cs

