crates/tmc-langs-cli/tests/snapshots/integration__compress_project_zip@csharp__non-compiling-exercise.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: output
input_file: sample_exercises/csharp/non-compiling-exercise
---
output-kind: output-data
status: finished
message: compressed project from [PATH] to [PATH]
result: executed-command
data:
  output-data-kind: compressed-project-hash
  output-data: 7bea6755e6470d1e120457edfdbeed1ef66dc8bd0128784269584b739504879d
