crates/tmc-langs-cli/tests/snapshots/integration__compress_project_zip@csharp__partially-passing-2.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: files
input_file: sample_exercises/csharp/partially-passing
---
- partially-passing
- partially-passing/src
- partially-passing/src/TestProject
- partially-passing/src/TestProject/Program.cs
- partially-passing/src/TestProject/TestProject.csproj

