crates/tmc-langs-cli/tests/snapshots/integration__compress_project_zip@csharp__partially-passing.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: output
input_file: sample_exercises/csharp/partially-passing
---
output-kind: output-data
status: finished
message: compressed project from [PATH] to [PATH]
result: executed-command
data:
  output-data-kind: compressed-project-hash
  output-data: f2ad81e54293243fca0edf7090f61ea18767151f67c504439b396779b803d292
