crates/tmc-langs-cli/tests/snapshots/integration__compress_project_zip@csharp__passing-exercise.snap
---
source: crates/tmc-langs-cli/tests/integration.rs
expression: output
input_file: sample_exercises/csharp/passing-exercise
---
output-kind: output-data
status: finished
message: compressed project from [PATH] to [PATH]
result: executed-command
data: ~

